# Copyright (c) 2022-2022 Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

# Nuttx/drivers source files
NUTTX_DRIVERS_BCH_SRC_FILES = [
  "//third_party/NuttX/drivers/bch/bchdev_driver.c",
  "//third_party/NuttX/drivers/bch/bchdev_register.c",
  "//third_party/NuttX/drivers/bch/bchdev_unregister.c",
  "//third_party/NuttX/drivers/bch/bchlib_cache.c",
  "//third_party/NuttX/drivers/bch/bchlib_read.c",
  "//third_party/NuttX/drivers/bch/bchlib_sem.c",
  "//third_party/NuttX/drivers/bch/bchlib_setup.c",
  "//third_party/NuttX/drivers/bch/bchlib_teardown.c",
  "//third_party/NuttX/drivers/bch/bchlib_write.c",
]

NUTTX_DRIVERS_PIPES_SRC_FILES = [
  "//third_party/NuttX/drivers/pipes/fifo.c",
  "//third_party/NuttX/drivers/pipes/pipe.c",
  "//third_party/NuttX/drivers/pipes/pipe_common.c",
]

NUTTX_DRIVERS_PIPES_INCLUDE_DIRS = [ "//third_party/NuttX/drivers/pipes" ]

NUTTX_DRIVERS_VIDEO_SRC_FILES = [ "//third_party/NuttX/drivers/video/fb.c" ]

NUTTX_DRIVERS_VIDEO_INCLUDE_DIRS = [ "//third_party/NuttX/include/nuttx/video" ]

# Nuttx/fs source files for liteos-a kernel fs
NUTTX_FS_DIRENT_SRC_FILES = [
  "//third_party/NuttX/fs/dirent/fs_closedir.c",
  "//third_party/NuttX/fs/dirent/fs_opendir.c",
  "//third_party/NuttX/fs/dirent/fs_readdir.c",
  "//third_party/NuttX/fs/dirent/fs_rewinddir.c",
  "//third_party/NuttX/fs/dirent/fs_seekdir.c",
  "//third_party/NuttX/fs/dirent/fs_telldir.c",
]

NUTTX_FS_DRIVER_SRC_FILES = [
  "//third_party/NuttX/fs/driver/fs_blockproxy.c",
  "//third_party/NuttX/fs/driver/fs_closeblockdriver.c",
  "//third_party/NuttX/fs/driver/fs_findblockdriver.c",
  "//third_party/NuttX/fs/driver/fs_openblockdriver.c",
  "//third_party/NuttX/fs/driver/fs_registerblockdriver.c",
  "//third_party/NuttX/fs/driver/fs_registerdriver.c",
  "//third_party/NuttX/fs/driver/fs_unregisterblockdriver.c",
  "//third_party/NuttX/fs/driver/fs_unregisterdriver.c",
]

NUTTX_FS_INODE_SRC_FILES = [ "//third_party/NuttX/fs/inode/fs_files.c" ]

NUTTX_FS_MOUNT_SRC_FILES = [
  "//third_party/NuttX/fs/mount/fs_foreachmountpoint.c",
  "//third_party/NuttX/fs/mount/fs_mount.c",
  "//third_party/NuttX/fs/mount/fs_sync.c",
  "//third_party/NuttX/fs/mount/fs_umount.c",
]

NUTTX_FS_VFS_SRC_FILES = [
  "//third_party/NuttX/fs/vfs/fs_close.c",
  "//third_party/NuttX/fs/vfs/fs_dup.c",
  "//third_party/NuttX/fs/vfs/fs_dup2.c",
  "//third_party/NuttX/fs/vfs/fs_dupfd.c",
  "//third_party/NuttX/fs/vfs/fs_dupfd2.c",
  "//third_party/NuttX/fs/vfs/fs_fcntl.c",
  "//third_party/NuttX/fs/vfs/fs_fsync.c",
  "//third_party/NuttX/fs/vfs/fs_getfilep.c",
  "//third_party/NuttX/fs/vfs/fs_ioctl.c",
  "//third_party/NuttX/fs/vfs/fs_link.c",
  "//third_party/NuttX/fs/vfs/fs_lseek.c",
  "//third_party/NuttX/fs/vfs/fs_lseek64.c",
  "//third_party/NuttX/fs/vfs/fs_mkdir.c",
  "//third_party/NuttX/fs/vfs/fs_open.c",
  "//third_party/NuttX/fs/vfs/fs_poll.c",
  "//third_party/NuttX/fs/vfs/fs_pread.c",
  "//third_party/NuttX/fs/vfs/fs_pread64.c",
  "//third_party/NuttX/fs/vfs/fs_pwrite.c",
  "//third_party/NuttX/fs/vfs/fs_pwrite64.c",
  "//third_party/NuttX/fs/vfs/fs_read.c",
  "//third_party/NuttX/fs/vfs/fs_readlink.c",
  "//third_party/NuttX/fs/vfs/fs_rename.c",
  "//third_party/NuttX/fs/vfs/fs_rmdir.c",
  "//third_party/NuttX/fs/vfs/fs_select.c",
  "//third_party/NuttX/fs/vfs/fs_sendfile.c",
  "//third_party/NuttX/fs/vfs/fs_stat.c",
  "//third_party/NuttX/fs/vfs/fs_statfs.c",
  "//third_party/NuttX/fs/vfs/fs_symlink.c",
  "//third_party/NuttX/fs/vfs/fs_truncate.c",
  "//third_party/NuttX/fs/vfs/fs_truncate64.c",
  "//third_party/NuttX/fs/vfs/fs_unlink.c",
  "//third_party/NuttX/fs/vfs/fs_write.c",
]

NUTTX_FS_NFS_SRC_FILES = [
  "//third_party/NuttX/fs/nfs/nfs_adapter.c",
  "//third_party/NuttX/fs/nfs/nfs_util.c",
  "//third_party/NuttX/fs/nfs/rpc_clnt.c",
]

NUTTX_FS_TMPFS_SRC_FILES = [ "//third_party/NuttX/fs/tmpfs/fs_tmpfs.c" ]

NUTTX_FS_ROMFS_SRC_FILES = [
  "//third_party/NuttX/fs/romfs/fs_romfs.c",
  "//third_party/NuttX/fs/romfs/fs_romfsutil.c",
]
